--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,136 @@ Green: #00B172
 White: #FFF
 
 */
+
+    body, html {
+        font-family: 'Roboto';
+        margin: 0;
+        padding: 0;
+    }
+
+/* navigation bar */
+    .logo {
+        width: 160px;
+        height: 50px;
+    }
+
+    .nav-buttons {
+        display: flex;
+        gap: 30px;
+        padding: 0px 90px;
+    }
+
+    .nav-buttons li{
+        list-style: none;
+        font-size: 20px;
+    }
+
+    nav {
+        padding: 30px;
+        position: fixed;
+        width: 100vw;
+        height: 20px;
+        background-color: white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1;
+    }
+
+    nav a {
+        text-decoration: none;
+        color: black;
+    }
+
+/* header - music for everyone*/
+    header {
+        background-image: url("../images/landing.jpg");
+        width: 100vw;
+        height: 800px;
+        background-size: cover;
+    }
+
+    .section1 {
+        height: 800px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        text-align: center;
+        font-size: xx-large;
+    }
+
+/* what's on spotify */
+    .section2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .section2 h2 {
+        margin-top: 60px;
+        border-bottom: 4px solid #00B172;
+        padding-bottom: 8px;
+    }
+
+    .icons img{
+        width: 100px;
+    }
+
+    .icons {
+        display: flex;
+        gap: 100px;
+    }
+
+    .icons div {
+        width: 210px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 30px;
+        font-size: large;
+    }
+
+    .icons h3 {
+        color: #00B172;
+    }
+
+/* it's as yeezy as kanye west */
+    .section3 {
+        display: flex;
+        justify-content: space-between;
+        background-color: #00B172;
+        margin: 0px 30px;
+        color: white;
+        position: relative;
+        padding: 80px;
+    }
+
+    .logo-white {
+        width: 100px;
+        position: absolute;
+        left: 50%;
+        bottom: 50%;
+    }
+
+    .playMusic {
+        width: 300px;
+    }
+
+    .title-text {
+        display: inline;
+        padding-bottom: 10px;
+        border-bottom: 2px solid white;
+    }
+
+    .yeezy-kanye div {
+        width: 300px;
+    }
+
+    .text-container {
+        margin-top: 100px;
+    }
